<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/session_number"
                        android:ems="10"
                        android:id="@+id/sessionNumberKey" android:textSize="18sp"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/sessionNumberValue"
                        android:textSize="18sp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/session_started"
                        android:ems="10"
                        android:id="@+id/sessionStartedKey" android:textSize="18sp"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/sessionStartedValue"
                        android:textSize="18sp"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/playoffs"
                        android:ems="10"
                        android:id="@+id/playoffsKey" android:textSize="18sp"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/playoffsValue" android:textSize="18sp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/next_game"
                        android:ems="10"
                        android:id="@+id/nextGameKey" android:textSize="18sp"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/nextGameValue" android:textSize="18sp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/last_game"
                        android:ems="10"
                        android:id="@+id/lastGameKey" android:textSize="18sp"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/lastGameValue" android:textSize="18sp"/>
            </TableRow>
        </TableLayout>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/teammates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/teammatesButton"/>
        </TableRow>
    </LinearLayout>
</LinearLayout>
