<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="0dip"
                        android:layout_height="fill_parent" android:layout_weight=".25">

                    <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:id="@+id/teammateName"
                            tools:layout_editor_absoluteX="82dp" android:textSize="14sp"/>
                </android.support.constraint.ConstraintLayout>
                <android.support.constraint.ConstraintLayout
                        android:layout_weight=".5"
                        android:layout_width="0dip" android:layout_height="fill_parent">

                    <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/teammateEmail" android:layout_weight="1"
                            tools:layout_editor_absoluteX="410dp" android:textSize="14sp"/>
                </android.support.constraint.ConstraintLayout>
                <android.support.constraint.ConstraintLayout
                        android:layout_width="0dip"
                        android:layout_height="fill_parent" android:layout_weight=".125">

                    <ToggleButton
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" android:id="@+id/includeEmailButton"
                            android:checked="true"
                            android:textOff="@string/n" android:textOn="@string/y"/>
                </android.support.constraint.ConstraintLayout>
                <android.support.constraint.ConstraintLayout
                        android:layout_width="0dip"
                        android:layout_height="fill_parent" android:layout_weight=".125">

                    <Button
                            android:text="@string/delete_teammate"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" android:id="@+id/deleteTeammateButton"
                            android:layout_weight="1" android:layout_gravity="center"
                            tools:layout_editor_absoluteY="342dp"/>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </TableRow>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>